# 4Linha

./: CMakeLists.txt  README.md  ReadMe.MD  main.cpp
board/: Board.cpp  Board.h
game/: Game.cpp  Game.h
menu/: Menu.cpp  Menu.h
pieces/: EmptyPiece.cpp  EmptyPiece.h  Piece.cpp  Piece.h  PlayerPiece.cpp  PlayerPiece.h
